--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Secure desktop password manager with 2FA authenticator built with Electron + React",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "vite"
+    "dev": "vite --config frontend/vite.config.js",
+    "dev:electron": "electron .",
+    "build": "vite build --config frontend/vite.config.js",
+    "preview": "vite preview --config frontend/vite.config.js",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
