--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "axios": "^1.6.2",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
