--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "argon2": "^0.44.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
