--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start" : "cd ../server && npm run dev & cd ../client && npm run dev",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -10,7 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "axios": "^1.6.2",
+    "axios": "^1.13.1",
     "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
