fixed dashboard-breach-alert ui in  icons-error

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ dist
 tree.js
 structure.txt
 conception.txt
+.\client\src\components\dashboard\dashboard design.png
+.\client\src\components\dashboard\detailed card pop ups design.png
+
 
 # Electron
 out/
