--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "dev:server": "cd server && npm run dev",
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\" \"npm run electron:dev\"",
     "build:client": "cd client && npm run build",
+    "build": "npm run build:client",
     "electron:dev": "electron .",
-    "electron:build": "electron-builder",
+    "electron:build": "npm run build && electron-builder",
     "start": "npm run build:client && npm run electron:dev"
   },
   "devDependencies": {
@@ -26,13 +27,20 @@
     },
     "files": [
       "electron/**/*",
-      "client/dist/**/*"
+      "client/dist/**/*",
+      "server/**/*",
+      "!server/node_modules/**/*",
+      "node_modules/**/*"
     ],
-    "win": {
-      "target": [
-        "nsis"
-      ],
-      "icon": "client/public/icons/icon.ico"
+    "linux": {
+      "target": ["AppImage", "deb"],
+      "icon": "client/public/icons/shield.png",
+      "category": "Utility",
+      "desktop": {
+        "Name": "Lockit",
+        "Comment": "Password Manager",
+        "Categories": "Utility;Security;"
+      }
     }
   },
   "dependencies": {
