--- a/package.json
+++ b/package.json
@@ -29,8 +29,17 @@
       "client/dist/**/*"
     ],
     "win": {
-      "target": ["nsis"],
+      "target": [
+        "nsis"
+      ],
       "icon": "client/public/icons/icon.ico"
     }
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.90.10",
+    "bootstrap": "^5.3.8",
+    "uuid": "^13.0.0",
+    "v4": "^0.0.1",
+    "zustand": "^5.0.8"
   }
 }
