--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.1",
+    "bootstrap": "^5.3.8",
     "lucide-react": "^0.545.0",
     "otpauth": "^9.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
