--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.11",
     "qrcode": "^1.5.3",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
